--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="c:\Users\STUDENT\Pictures\vinoth.png"alt="Your Profile Picture"class="profile-picture">
+            <img src="WhatsApp Image 2023-10-30 at 1.55.02 PM (1).jpeg"alt="Your Profile Picture"class="profile-picture">
             <h1>ARAVINTHAN.P</h1>
             <p>Computer Science</p>
         </div>
